crates/deadline-cli/tests/cli/snapshots/cli__queue_sync_output__sync_output_search_jobs_fails_returns_error.snap
---
source: crates/deadline-cli/tests/cli/queue_sync_output.rs
info:
  program: deadline
  args:
    - queue
    - sync-output
    - "--ignore-storage-profiles"
    - "--checkpoint-dir"
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmprPavpi
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:63276"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:63276"
    AWS_ENDPOINT_URL_S3: "http://localhost:63276"
    AWS_ENDPOINT_URL_STS: "http://localhost:63276"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpdbTeV2/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpdbTeV2
---
success: false
exit_code: 1
----- stdout -----
Failed to search active jobs: AccessDeniedException: No message

----- stderr -----
Ignoring all storage profiles.
Started incremental download for queue: Test Queue
Checkpoint: [PATH]

Checkpoint not found, lookback is 0 minutes
Initializing from: [TIMESTAMP]

Updating download state across time interval:
    From: [TIMESTAMP]
      To: [TIMESTAMP]

Retrieving updated data from Deadline Cloud...
