crates/deadline-cli/tests/cli/snapshots/cli__queue_sync_output__sync_output_storage_profile_and_ignore_mutual_exclusion.snap
---
source: crates/deadline-cli/tests/cli/queue_sync_output.rs
info:
  program: deadline
  args:
    - queue
    - sync-output
    - "--storage-profile-id"
    - sp-123
    - "--ignore-storage-profiles"
    - "--checkpoint-dir"
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphGILhp
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:57000"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:57000"
    AWS_ENDPOINT_URL_S3: "http://localhost:57000"
    AWS_ENDPOINT_URL_STS: "http://localhost:57000"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpf7OUhN/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpf7OUhN
---
success: false
exit_code: 2
----- stdout -----
Options '--storage-profile-id' and '--ignore-storage-profiles' cannot be provided together

----- stderr -----
